--- a/tomo/templates/modal/anonymous_problem.html
+++ b/tomo/templates/modal/anonymous_problem.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="modal-footer">
-    <a href="{% url student_download problem.id %}" class="btn btn-secondary"><i class="icon-check"></i> Reši nalogo</a>
+    <a href="{% url "student_download" problem.id %}" class="btn btn-secondary"><i class="icon-check"></i> Reši nalogo</a>
   </div>
 </div>
 {% endcache %}
