--- a/tomo/templates/modal/anonymous_problem_set.html
+++ b/tomo/templates/modal/anonymous_problem_set.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="modal-footer">
-    <a href="{% url student_zip problem_set.id %}" class="btn btn-secondary"><i class="icon-check"></i> Reši sklop</a>
+    <a href="{% url "student_zip" problem_set.id %}" class="btn btn-secondary"><i class="icon-check"></i> Reši sklop</a>
   </div>
 </div>
 {% endcache %}
