--- a/tomo/templates/problem_set.html
+++ b/tomo/templates/problem_set.html
@@ -18,21 +18,21 @@
   {% if request.user.is_staff %}
   <ul class="nav nav-tabs">
     <li class="active">
-      <a href="{% url problem_set problem_set.id %}">Naloge</a>
+      <a href="{% url "problem_set" problem_set.id %}">Naloge</a>
     </li>
     <li>
-      <a href="{% url view_statistics problem_set.id 120 %}">Statistika</a>
+      <a href="{% url "view_statistics" problem_set.id 120 %}">Statistika</a>
     </li>
   </ul>
   {% endif %}
 
   {% if request.user.is_staff %}
-    <a href="{% url teacher_zip problem_set.id %}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Uredi sklop</a>
-    <a href="{% url student_zip problem_set.id %}" class="btn"><i class="icon-check"></i> Reši sklop</a>
-    <a href="{% url results_csv problem_set.id %}" class="btn"><i class="icon-th"></i> Shrani rezultate</a>
+    <a href="{% url "teacher_zip" problem_set.id %}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Uredi sklop</a>
+    <a href="{% url "student_zip" problem_set.id %}" class="btn"><i class="icon-check"></i> Reši sklop</a>
+    <a href="{% url "results_csv" problem_set.id %}" class="btn"><i class="icon-th"></i> Shrani rezultate</a>
   {% else %}
     {% if request.user.is_authenticated %}
-      <a href="{% url student_zip problem_set.id %}" class="btn btn-primary"><i class="icon-check icon-white"></i> Reši sklop</a>
+      <a href="{% url "student_zip" problem_set.id %}" class="btn btn-primary"><i class="icon-check icon-white"></i> Reši sklop</a>
     {% else %}
       {% include 'modal/anonymous_problem_set.html' %}
       <a href="#anonymous-download-problem-set-{{ problem_set.id }}" data-toggle="modal" class="btn btn-primary"><i class="icon-check icon-white"></i> Reši sklop</a>
@@ -45,22 +45,22 @@
     {% if request.user.is_staff %}
       <h2 id="problem-{{ problem.id }}">
         {{ problem.title }}
-        <a class="icon-share status" href="{% url mass_zip problem.id %}" title="Oceni naloge"></a>
-        <a class="icon-edit status" href="{% url teacher_download problem.id %}" title="Uredi nalogo"></a>
-        <a class="icon-check status" href="{% url student_download problem.id %}" title="Reši nalogo"></a>
-        <a class="icon-random action" href="{% url moss_zip problem.id %}" title="MOSS"></a>
-        <a class="icon-cog action" href="{% url admin:tomo_problem_change problem.id %}" title="Napredne nastavitve naloge…"></a>
-        <a class="icon-trash action" href="{% url admin:tomo_problem_delete problem.id %}" title="Pobriši nalogo"></a>
+        <a class="icon-share status" href="{% url "mass_zip" problem.id %}" title="Oceni naloge"></a>
+        <a class="icon-edit status" href="{% url "teacher_download" problem.id %}" title="Uredi nalogo"></a>
+        <a class="icon-check status" href="{% url "student_download" problem.id %}" title="Reši nalogo"></a>
+        <a class="icon-random action" href="{% url "moss_zip" problem.id %}" title="MOSS"></a>
+        <a class="icon-cog action" href="{% url "admin:tomo_problem_change" problem.id %}" title="Napredne nastavitve naloge…"></a>
+        <a class="icon-trash action" href="{% url "admin:tomo_problem_delete" problem.id %}" title="Pobriši nalogo"></a>
         <a class="icon-share-alt action" data-toggle="modal" href="#copy-problem-{{ problem.id }}" title="Kopiraj nalogo"></a>
-        <a class="icon-arrow-up action" href="{% url move_problem problem.id -1 %}" title="Premakni gor"></a>
-        <a class="icon-arrow-down action" href="{% url move_problem problem.id 1 %}" title="Premakni dol"></a>
+        <a class="icon-arrow-up action" href="{% url "move_problem" problem.id -1 %}" title="Premakni gor"></a>
+        <a class="icon-arrow-down action" href="{% url "move_problem" problem.id 1 %}" title="Premakni dol"></a>
       </h2>
     {% else %}
       <div class="problem">
       <h2 id="problem-{{ problem.id }}">
         {{ problem.title }}
         {% if request.user.is_authenticated %}
-          <a class="icon-check status" href="{% url student_download problem.id %}" title="Reši nalogo"></a>
+          <a class="icon-check status" href="{% url "student_download" problem.id %}" title="Reši nalogo"></a>
         {% else %}
           <a class="icon-check status" href="#anonymous-download-problem-{{ problem.id }}" data-toggle="modal" title="Reši nalogo"></a>
         {% endif %}
@@ -78,7 +78,7 @@
           <h4>
             <a class="icon-search status" data-toggle="modal" title="Poglejte rešitev" href="#solutions-{{ problem.id }}-{{ part.id }}-{{ user.id }}"></a>
             {% if request.user.is_staff %}
-            <a class="icon-trash action" href="{% url admin:tomo_part_delete part.id %}" title="Pobriši podnalogo"></a>
+            <a class="icon-trash action" href="{% url "admin:tomo_part_delete" part.id %}" title="Pobriši podnalogo"></a>
             {% endif %}
             Podnaloga {{ forloop.counter }}
             {% if attempt.correct %}
