Added interface for creating new problem sets.

--- a/tomo/templates/sidebar/staff.html
+++ b/tomo/templates/sidebar/staff.html
@@ -27,6 +27,10 @@
       <a href="{% url "problem_set" ps.id %}">{{ ps.title }}</a>
     </li>
 {% endfor %}
+    <li>
+    {% include "modal/add_problem_set.html" %}
+    <a href="#add-problem-set" data-toggle="modal">+ dodaj sklop</a>
+    </li>
 {% empty %}
   Preden začnete sestavljati naloge, v <a href="#settings-form" data-toggle="modal" style="display: inline">nastavitvah</a> izberite predmete, pri katerih sodelujete.
 {% endfor %}
