--- a/tomo/templates/sidebar/staff.html
+++ b/tomo/templates/sidebar/staff.html
@@ -4,12 +4,12 @@
 <li class="nav-header">{{ course.name }}</li>
 {% for ps in course.problem_sets.all %}
     <li class="{% if ps.id == problem_set.id %}active{% endif %} {% if not ps.visible %}hidden{% endif %}">
-      <a href="{% url "toggle_solution_visibility" ps.id %}" class="status" title="Rešitve so {{ ps.get_solution_visibility_display }}">
+      <a href="{% url "courses.views.problemset_toggle_solution_visibility" ps.id %}" class="status" title="Rešitve so {{ ps.get_solution_visibility_display }}">
         {% if ps.solution_visibility == 'skrite' %}<i class="icon-ban-circle"></i>{% endif %}
         {% if ps.solution_visibility == 'pogojno' %}<i class="icon-remove-circle"></i>{% endif %}
         {% if ps.solution_visibility == 'vidne' %}<i class="icon-ok-circle"></i>{% endif %}
       </a>
-      <a href="{% url "toggle_visible" ps.id %}" class="status" rel="tooltip" title="Sklop je {% if ps.visible %}viden{% else %}skrit{% endif %}">
+      <a href="{% url "courses.views.problemset_toggle_visible" ps.id %}" class="status" rel="tooltip" title="Sklop je {% if ps.visible %}viden{% else %}skrit{% endif %}">
         <i class="icon-eye-{% if ps.visible %}open{% else %}close{% endif %}"></i>
       </a>
       <a href="{% url "admin:courses_problemset_delete" ps.id %}" class="action" title="Pobriši">
@@ -18,10 +18,10 @@
       <a href="{% url "admin:courses_problemset_change" ps.id %}" class="action" title="Napredno…">
         <i class="icon-cog"></i>
       </a>
-      <a href="{% url "move_problem_set" ps.id -1 %}" class="action" title="Premakni gor">
+      <a href="{% url "courses.views.problemset_move" ps.id -1 %}" class="action" title="Premakni gor">
         <i class="icon-arrow-up"></i>
       </a>
-      <a href="{% url "move_problem_set" ps.id 1 %}" class="action" title="Premakni dol">
+      <a href="{% url "courses.views.problemset_move" ps.id 1 %}" class="action" title="Premakni dol">
         <i class="icon-arrow-down"></i>
       </a>
       <a href="{% url "problem_set" ps.id %}">{{ ps.title }}</a>
