base.html and modal.html are based off core.html.

--- a/tomo/templates/tomo/part_confirm_delete.html
+++ b/tomo/templates/tomo/part_confirm_delete.html
@@ -5,7 +5,7 @@
   Brisanje podnaloge
 {% endblock %}
 
-{% block body %}
+{% block contents %}
 <p>Ste prepričani, da želite pobrisati sledečo podnalogo?</p>
 
 <div class="well">
