--- a/tomo/templates/base.html
+++ b/tomo/templates/base.html
@@ -1,31 +1,7 @@
+{% extends 'core.html' %}
 {% load my_tags %}
-<!DOCTYPE html>
-<html lang="si">
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Tomo{% endblock %}</title>
-    <meta name="description" content="">
-    <meta name="author" content="Matija Pretnar">
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="{{ STATIC_URL }}js/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le styles -->
-    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/prettify.css" rel="stylesheet">
-    <link href="{{ STATIC_URL}}css/tomo.css" rel="stylesheet">
-
-    <!-- Le fav and touch icons -->
-    <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
-    <!-- <link rel="apple-touch-icon" href="images/apple-touch-icon.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
-  </head>
-
-  <body>
-
+{% block body %}
    <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
@@ -102,21 +78,4 @@
     {% endif %}
 
     </div><!--/.fluid-container-->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-        tex2jax: {
-          inlineMath: [ ['$','$'], ["\\(","\\)"] ]
-        }
-      });
-    </script>
-    <script type="text/javascript" src="{{ STATIC_URL }}MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/prettify.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/tomo.js" type="text/javascript"></script>
-  </body>
-</html>
+{% endblock body %}
