--- a/tomo/templates/modal.html
+++ b/tomo/templates/modal.html
@@ -4,26 +4,18 @@
 {% block body %}
 <div class="modal" id="anonymous-download-problem-set-{{ problem_set.id }}">
   <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
+    <a class="close" href="{{ request.META.HTTP_REFERER }}">×</a>
     <h3>
       {% block title %}{% endblock title %}
     </h3>
   </div>
 
   <div class="modal-body">
-    {% block contents %}
-    <p>
-      Če se ne morete prijaviti, lahko naloge rešujete z začasnimi datotekami.
-      V tem primeru se vaše rešitve <strong>ne bodo shranile na strežnik</strong>.
-      Ko se boste lahko spet prijavili, boste naloge morali ponovno prenesti ter vanje prepisati začasne rešitve.
-    </p>
-    {% endblock contents %}
+    {% block contents %}{% endblock %}
   </div>
 
   <div class="modal-footer">
-    {% block footer %}
-    <a href="" class="btn btn-secondary"><i class="icon-check"></i> Reši sklop</a>
-    {% endblock footer %}
+    {% block footer %}{% endblock %}
   </div>
 </div>
 {% endblock body %}
