--- a/tomo/templates/problem_set.html
+++ b/tomo/templates/problem_set.html
@@ -48,7 +48,7 @@
         <a class="icon-edit status" href="{% url "teacher_download" problem.id %}" title="Uredi nalogo"></a>
         <a class="icon-check status" href="{% url "student_download" problem.id %}" title="Reši nalogo"></a>
         <a class="icon-cog action" href="{% url "admin:tomo_problem_change" problem.id %}" title="Napredne nastavitve naloge…"></a>
-        <a class="icon-trash action" href="{% url "admin:tomo_problem_delete" problem.id %}" title="Pobriši nalogo"></a>
+        <a class="icon-trash action" href="{% url "problem_delete" problem.id %}" title="Pobriši nalogo"></a>
         <a class="icon-share-alt action" data-toggle="modal" href="#copy-problem-{{ problem.id }}" title="Kopiraj nalogo"></a>
         <a class="icon-arrow-up action" href="{% url "move_problem" problem.id -1 %}" title="Premakni gor"></a>
         <a class="icon-arrow-down action" href="{% url "move_problem" problem.id 1 %}" title="Premakni dol"></a>
