--- a/tomo/templates/tomo/problem_form.html
+++ b/tomo/templates/tomo/problem_form.html
@@ -2,7 +2,11 @@
 {% load my_tags %}
 
 {% block title %}
-  Dodajanje naloge v sklop {{ problem_set.title }}
+  {% if form.instance.pk %}
+    Urejanje naloge <em>{{ form.instance.title }}</em>
+  {% else %}
+    Dodajanje naloge v sklop <em>{{ problem_set.title }}</em>
+  {% endif %}
 {% endblock %}
 
 {% block contents %}
@@ -12,6 +16,6 @@
 
 {% block footer %}
     {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Dodaj</button>
+    <button type="submit" class="btn btn-primary">{{ form.instance.pk|yesno:"Uredi,Dodaj" }}</button>
   </form>
 {% endblock %}
