--- a/tomo/templates/base.html
+++ b/tomo/templates/base.html
@@ -11,7 +11,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.get_full_name }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a data-toggle="modal" href="#settings-form">Nastavitve</a></li>
+                <li><a href="{% url "settings" %}">Nastavitve</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url "django.contrib.auth.views.logout" %}">Odjavite se</a></li>
               </ul>
@@ -74,7 +74,6 @@
       </footer>
     
     {% if user.is_authenticated %}
-    {% include 'modal/settings.html' %}
     {% endif %}
 
     </div><!--/.fluid-container-->
