--- a/tomo/templates/modal/settings.html
+++ b/tomo/templates/modal/settings.html
@@ -1,28 +1,18 @@
-<div class="modal fade" id="settings-form">
-  <div class="modal-header">
-    <a class="close" data-dismiss="modal">×</a>
-    <h3>
-      Nastavitve
-    </h3>
-  </div>
+{% extends 'modal.html' %}
+{% load my_tags %}
+{% load crispy_forms_tags %}
 
-  <form method="POST" action="{% url "settings" %}">
-  <div class="modal-body">
+{% block title %}
+  Nastavitve
+{% endblock %}
+
+{% block contents %}
+<form method="post">
+    {{ form|crispy }}
+{% endblock %}
+
+{% block footer %}
     {% csrf_token %}
-    <h4>Moji predmeti</h4>
-    {% with request.user.courses.all as user_courses %}
-    {% for course in all_courses %}
-      <label class="checkbox">
-        <input type="checkbox" name="my_courses" value="{{ course.id }}" {% if course in user_courses %}checked{% endif %}>
-          {{ course.name }}
-          <span class="help-block">{{ course.description }}</span>
-      </label>
-    {% endfor %}
-    {% endwith %}
-  </div>
-
-  <div class="modal-footer">
     <button type="submit" class="btn primary">Shrani</button>
-  </div>
   </form>
-</div>
+{% endblock %}
