--- a/templates/core.html
+++ b/templates/core.html
@@ -13,8 +13,8 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/prettify.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/tomo.css" rel="stylesheet">
 
     <!-- Le fav and touch icons -->
@@ -38,10 +38,10 @@
         }
       });
     </script>
-    <script type="text/javascript" src="{{ STATIC_URL }}MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/prettify.js" type="text/javascript"></script>
+    <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
     <script src="{{ STATIC_URL }}js/tomo.js" type="text/javascript"></script>
   </body>
 </html>
