--- a/templates/core.html
+++ b/templates/core.html
@@ -3,34 +3,25 @@
 <html lang="si">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Tomo{% endblock %}</title>
-    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Projekt Tomo: spletna storitev za poučevanje programiranja">
     <meta name="author" content="Matija Pretnar">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="{{ STATIC_URL }}js/html5.js"></script>
-    <![endif]-->
+    <title>{% block title %}Projekt Tomo{% endblock %}</title>
 
-    <!-- Le styles -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="starter-template.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">
     <link href="{{ STATIC_URL}}css/tomo.css" rel="stylesheet">
-
-    <!-- Le fav and touch icons -->
-    <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
-    <!-- <link rel="apple-touch-icon" href="images/apple-touch-icon.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
   </head>
 
   <body>
-
     {% block body %}{% endblock %}
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
@@ -39,8 +30,6 @@
       });
     </script>
     <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="//code.jquery.com/jquery-1.7.1.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/2.0.4/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
     <script src="{{ STATIC_URL }}js/tomo.js" type="text/javascript"></script>
   </body>
