--- a/templates/base.html
+++ b/templates/base.html
@@ -2,33 +2,43 @@
 {% load my_tags %}
 
 {% block body %}
-   <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="brand" href="{% url "homepage" %}">Tomo{% if debug %} – razvojna različica{% endif %}</a>
-          {% if user.is_authenticated %}
-          <ul class="nav pull-right">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{% url "homepage" %}">Tomo{% if debug %} – razvojna različica{% endif %}</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        {% if user.is_authenticated %}
+          <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.get_full_name }} <b class="caret"></b></a>
-              <ul class="dropdown-menu">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ user.get_full_name }} <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
                 <li><a data-toggle="modal" href="#settings-form">Nastavitve</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url "django.contrib.auth.views.logout" %}">Odjavite se</a></li>
               </ul>
             </li>
           </ul>
-          {% else %}
-            <form method='post' action="{% url "django.contrib.auth.views.login" %}" class="navbar-form pull-right">
-              {% csrf_token %}
-              <input class="input-small" id="id_username" name="username" type="text" placeholder="KovacM">
-              <input class="input-small" id="id_password" name="password" type="password" placeholder="Triglav.1">
-              <input type='hidden' name='next' value='{{ next|default:request.path }}' >
-              <button class="btn" type="submit">Prijavite se</button>
-            </form>
-          {% endif %}
-        </div>
-      </div>
+        {% else %}
+          <form method='post' action="{% url "django.contrib.auth.views.login" %}" class="navbar-form navbar-right">
+            <div class="form-group">
+              <input class="form-control" id="id_username" name="username" type="text" placeholder="KovacM">
+              <input class="form-control" id="id_password" name="password" type="password" placeholder="Triglav.1">
+            </div>
+            <input type='hidden' name='next' value='{{ next|default:request.path }}'>
+            {% csrf_token %}
+            <button type="submit" class="btn btn-default">Prijavite se</button>
+          </form>
+        {% endif %}
+      </div><!--/.nav-collapse -->
     </div>
+  </nav>
 
     <div class="container-fluid">
       <div class="row-fluid">
