--- a/web/problems/templates/problems/problem_detail.html
+++ b/web/problems/templates/problems/problem_detail.html
@@ -10,6 +10,4 @@
 </ul>
 
 
-<form action="download" method="get">
- <input type="submit" value="Prenesi nalogo">
-</form>
+<a href="{% url 'problem_attempt_file' problem.id %}">Prenesi nalogo</a>
