--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      {% block body %}{% endblock %}
+      {% block body %}  {% block content %}{% endblock %}  {% endblock %}
     </div><!-- /.container -->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
