Remove problem_detail
Remove problem_detail file

--- a/web/templates/problems/not_yet_enrolled.html
+++ b/web/templates/problems/not_yet_enrolled.html
@@ -17,7 +17,7 @@ pod predmeti še povezava na seznam vseh ostalih predmetov
 	{% if problems %}
     <ul>
     {% for problem in problems %}
-        <li><a href="{% url 'problem_detail' problem.id %}" target="blank">{{ problem.title }}</a></li>
+        <li>{{ problem.title }}</li>
     {% endfor %}
     </ul>
 {% else %}
