Logout, solution comparison

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -4,14 +4,7 @@
 {% block title %}Dobrodošli!{% endblock %}
 
 {% block navigation %}
-<!--    <nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container">
-	      <ol class="breadcrumb">
-	         <li><a href="problem_list.html">Naloge</li>
-	      </ol>
-	  </div>
-	</nav>
-	 -->
+<!-- Override navigation defined in base.html -->
 {% endblock %}
 
 {% block content %}
