--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -10,9 +10,32 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">
   </head>
   <body>
-    {% block navigation %}
-    {% endblock %}
+  
+  	{% if user.is_authenticated %}
+ 	{% endif %}
+
     <div class="container">
+  
+    {% block navigation %}
+        <nav class="navbar navbar-default">
+      		<div class="container-fluid">
+        		<div class="navbar-header">
+          			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-5">
+            			<span class="sr-only">Toggle navigation</span>
+            			<span class="icon-bar"></span>
+            			<span class="icon-bar"></span>
+            			<span class="icon-bar"></span>
+          			</button>
+          			 <a class="navbar-brand" href="/">Tomo</a>
+        		</div>
+        		        		 
+        		<ul class="nav navbar-nav navbar-right">
+        			<li><a href="{% url 'logout' %}">Logout {{ user.username }}</a></li>
+        		</ul>        		
+      		</div>
+    	</nav>
+    {% endblock %}
+
       {% block body %}  {% block content %}{% endblock %}  {% endblock %}
     </div><!-- /.container -->
 
