--- a/web/templates/problems/problem_list.html
+++ b/web/templates/problems/problem_list.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-
 {% block title %}Tomo - naloge{% endblock %} {# TODO: kasneje spremeni v {{ assembly.title }} #}
 
 {% block content %}
@@ -42,17 +41,10 @@
 	      		<p>
 	      			{{ forloop.counter }}. podnaloga    				  
     				{% if part.id in valid_parts_ids %}
-    				  <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" style="color: #00FF00"></span>
+    				  <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" style="color: #468847"></span>
     				{% elif  part.id in invalid_parts_ids %}
-    				  <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" style="color: #FF0000"></span>
+    				  <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" style="color: #A31919"></span>
     				{% endif %}
-    				<!-- 
-	      			<span class="glyphicon glyphicon-ok" aria-hidden="true" style="color: #00FF00"></span>
-	      			<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" style="color: #00FF00"></span>
-	      			<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" style="color: #FF0000"></span>
-	      			<span class="glyphicon glyphicon-remove" aria-hidden="true" style="color: #FF0000"></span>
-	      			<span class="glyphicon glyphicon-warning-sign" aria-hidden="true" style="color: #FF0000"></span>
-	      			 -->
 	      		</p> 
 	      		{{ part.description|latex_markdown }}
 	    	</li>
