Clean up templates

--- a/web/templates/problems/problem_list.html
+++ b/web/templates/problems/problem_list.html
@@ -53,7 +53,7 @@
    				<div class="btn-toolbar" role="toolbar" aria-label="Buttons">
 					<div class="btn-group" role="group" aria-label="Download">
 						<a class="btn btn-default" href="{% url 'problem_attempt_file' problem.id %}" role="button">
-							Prenesi nalogo
+							Datoteka z nalogo
 						</a>
 					</div>
 					<div class="btn-group" role="group" aria-label="Solutions">
