--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -26,11 +26,11 @@
             			<span class="icon-bar"></span>
             			<span class="icon-bar"></span>
           			</button>
-          			 <a class="navbar-brand" href="/">Tomo</a>
+          			 <a class="navbar-brand" href="/uvp/">Tomo</a>
         		</div>
         		        		 
         		<ul class="nav navbar-nav navbar-right">
-        			<li><a href="{% url 'logout' %}">Logout {{ user.username }}</a></li>
+        			<li><a href="{% url 'logout' %}">{{ user.get_full_name }} (odjava)</a></li>
         		</ul>        		
       		</div>
     	</nav>
